# json2cppgen

./: CMakeLists.txt  README.md
benchmarks/: benchmark.cpp
include/: cppstructgen.h  json2cppgen.h
src/: main.cpp
tests/: test.cpp
